Remove Project implementation